--- a/calculatortutorial.html
+++ b/calculatortutorial.html
@@ -14,6 +14,6 @@
 </head>
 <body>
 <input id="quest" type="text" size="100"></input> <button onclick="calculate()">=</button> <button onclick="calculate(true)">F</button></br>
-<input id="answer" type="text" readonly></input>
+<input id="answer" type="text" readonly></input><br/><a href="https://github.com/infusion/Fraction.js">Thanks to https://github.com/infusion/Fraction.js.</a>
 </body>
 </html>
